corrected my soln where gap should be used in ul

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -54,16 +54,24 @@ ul {
 .header{
   display: flex;
   justify-content: space-between;
+  padding: 8px;
 }
 .left{
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  align-items: center;
+  gap: 16px;
+}
+.right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 ul{
   display: flex;
   gap: 8px;
-  padding: auto;
-  margin-left: 0;
+  padding: 0;
+  margin: 0;
 }
 .right{
   display: flex;
